# codex-twitch-cohost

./: .gitignore  ARCHITECTURE.md  GOAL  MILESTONES  PROCESS_TREE.md  README.md  ROADMAP_GRAPH.md  STABILITY_AUDIT.md  components.json  config.example.json  index.html  package-lock.json  package.json  personality.example.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts  whisper.default.json
.github/workflows/: release.yml
data/memory_db/: db  snap.00000000000000AA
docs/media/: walkthrough.webm
public/: avatar-popup.html
scripts/: docs_capture.mjs  integration-smoke.sh  voice-smoke.sh  vosk_transcribe.py
src/: App.svelte  App.tsx  app.css  avatar-runtime.tsx  frontend-api.ts  frontend-types.ts  main.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/piper-linux/: README.txt
src-tauri/assets/piper-macos/: README.txt
src-tauri/assets/piper-win/: README.txt
src-tauri/assets/whisper/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: .keep
src-tauri/src/: app.rs  config.rs  error.rs  headless.rs  lib.rs  main.rs  state.rs
src-tauri/src/browser/: service.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/llm/: provider.rs
src-tauri/src/memory/: store.rs
src-tauri/src/personality/: engine.rs
src-tauri/src/search/: service.rs
src-tauri/src/security/: mod.rs  secret_store.rs
src-tauri/src/tts/: mod.rs
src-tauri/src/twitch/: eventsub.rs  irc.rs  mod.rs  oauth.rs
src-tauri/src/utils/: retry.rs
src-tauri/src/voice/: commands.rs  mod.rs  native_mic.rs  stt.rs
(+103 files in other folders)
