[package]
name = "twitch-cohost-bot"
version = "0.1.0"
description = "Cloud-first Twitch cohost bot desktop app"
authors = ["Twitch Cohost Bot Team"]
edition = "2021"

[lib]
name = "twitch_cohost_bot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }

[dependencies]
base64 = "=0.22.1"
chrono = { version = "=0.4.44", features = ["serde"] }
futures-util = "=0.3.32"
keyring = "=3.6.3"
log = "=0.4.28"
once_cell = "=1.20.2"
open = "=5.3.3"
parking_lot = "=0.12.5"
reqwest = { version = "=0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
rand = "=0.8.5"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
sha2 = "=0.10.9"
sled = "=0.34.7"
tempfile = "=3.23.0"
thiserror = "=1.0.69"
tokio = { version = "=1.51.1", features = ["full"] }
tokio-tungstenite = { version = "=0.24.0", features = ["rustls-tls-webpki-roots"] }
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter", "fmt"] }
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-log = "=2.8.0"
tauri-plugin-opener = "=2.5.3"
url = "=2.5.8"
uuid = { version = "=1.23.0", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
